--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -51,6 +51,21 @@ body {
 body {
   color: var(--font-color);
   background: var(--bg);
+
+  &::-webkit-scrollbar {
+    width: 20px;
+    display: block
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 16px;
+    background-color: var(--border-color);
+    border: 5px solid var(--bg)
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent
+  }
 }
 
 a {
